--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ You should also learn how to use AJAX and JSON for making server requests.</p>
 
         <div class="row block-9">
           <div class="col-md-6 ftco-animate">
-            <form action="POST" data-netlify="true" class="contact-form p-4 p-md-5 py-md-5">
+            <form method="POST" data-netlify="true" class="contact-form p-4 p-md-5 py-md-5">
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Your Name">
               </div>
