--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ You should also learn how to use AJAX and JSON for making server requests.</p>
           </div>
 
           <div class="col-md-4 ftco-animate">
-            <div class="model img d-flex align-items-end" style="background-image: url(images/model-10.jpeg);">
+            <div class="model img d-flex align-items-end" style="background-image: url(images/model-10.jpg);">
             	<a href="images/model-10.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
@@ -353,7 +353,7 @@ You should also learn how to use AJAX and JSON for making server requests.</p>
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="model img d-flex align-items-end" style="background-image: url(images/model-11.jpeg);">
+            <div class="model img d-flex align-items-end" style="background-image: url(images/model-11.jpg);">
             	<a href="images/model-11.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
