--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ ECMAScript 5 (JavaScript 5) is supported in all modern browsers. Take a good loo
     </section>
 		<!-- End About Me Section -->
 
-        <div class="row progress-circle pt-md-5">
+        <div class="row progress-circle pt-md-5" id="services">
         	<div class="col-md-7 order-md-last py-md-5">
         		<div class="row">
 				  		<div class="col-md-4 mb-md-0 mb-4 ftco-animate">
