--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@ ECMAScript 5 (JavaScript 5) is supported in all modern browsers. Take a good loo
     	</div>
     </section>
 		<!-- End About Me Section -->
-
-        <div class="row progress-circle pt-md-5" id="services">
-        	<div class="col-md-7 order-md-last py-md-5">
-        		<div class="row">
+	<section id="services" class="ftco-section">
+        	<div class="row progress-circle pt-md-5">
+        		<div class="col-md-7 order-md-last py-md-5">
+        			<div class="row">
 				  		<div class="col-md-4 mb-md-0 mb-4 ftco-animate">
 					      <div class="">
 					        <h2 class="text-center mb-4">Creation</h2>
@@ -192,6 +192,7 @@ ECMAScript 5 (JavaScript 5) is supported in all modern browsers. Take a good loo
 					            <div class="h5">75<sup class="small">%</sup></div>
 					          </div>
 					        </div>
+						      </section>
 					        <!-- END -->
 					      </div>
 					    </div>
