--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     					<div class="overlay"></div>
 	    				<div class="img img-video d-flex align-self-stretch align-items-center" style="background-image:url(images/about-2.jpg);">
 	    					<div class="video justify-content-center">
-									<a href="https://vimeo.com/45830194" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
+									<a href="https://www.youtube.com/watch?v=9332O6MJFg0" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
 										<span class="ion-ios-play"></span>
 			  					</a>
 								</div>
